--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@types/node": "^22.14.0",
     "@types/react-katex": "^3.0.4",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   }
 }
