--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.0.1",
+    "framer-motion": "^12.17.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "6",
-    "@google/genai": "^1.0.1",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "6",
+    "rehype-katex": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-math": "^6.0.0",
-    "rehype-katex": "^7.0.0"
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react-katex": "^3.0.4",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.0",
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.0"
   }
 }
